coracao animal - pag apoiadores

--- a/coracaoanimal/apoiadores.html
+++ b/coracaoanimal/apoiadores.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header> 
-        <h1>Coração Animal</h1>
-        <h2>APOIADORES</h2>
-        <nav>
+         <h1>Coração Animal Itupeva</h1>
+       <nav>
             <a href="index.html">Início</a>
         </nav>
-        
+         <p>  .  </p>
+         <p>  .  </p>
+        <h2>APOIADORES</h2>
     </header>
 
     <main>
@@ -33,6 +34,7 @@
         </div>
 
         <div class="apoiadores">
+            <h1><strong>MUITO OBRIGADO AOS NOSSOS APOIADORES</strong></h1>
             <ul>
                 <li>Adriana Rossi</li>
                 <li>Aline Kim</li>
@@ -42,34 +44,34 @@
                 <li>Andrea Baltazar</li>
                 <li>Andrea Motta</li>
                 <li>Camila Ingrid Marques Almeida</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
-                <li>asd asdf asdf</li>
+                <li>Camila Annaruma</li>
+                <li>Charles Walther da Silva</li>
+                <li>Cristiane Aparecida de Oliveira Campos</li>
+                <li>Elisa Maria Secco Andreoni</li>
+                <li>Giovanna Fernandes Buranello</li>
+                <li>Gustavo Angeluzzi</li>
+                <li>Juliane Muller</li>
+                <li>Larissa do Nascimento Paiva</li>
+                <li>Luciana Ponglio Bassani</li>
+                <li>Maria Cristina Alves</li>
+                <li>Maria Rita Saraiva Hime Granco</li>
+                <li>Morijoy</li>
+                <li>Natalia Angeluzzi</li>
+                <li>Patrícia Casari</li>
+                <li>Patrícia Fernandes</li>
+                <li>Pedro Henrique Sampaio</li>
+                <li>Ronaldo Rodrigues de Moura</li>
+                <li>Samara Favorin</li>
+                <li>Sara Chaves Oliveira Martins</li>
+                <li>Silvia Maria Secco Andreoni</li>
+                <li>Tamara Accorsi</li>
+                <li>Thelma de Carvalho Guimarães</li>
+                <li>Vanessa Luciana dos Santos</li>
+                <li>Veridiana Angeluzzi Jardim</li>
+                <li>Vicente Tognela de Almeida</li>
+                <li>Victor Zem Cunha</li>
+                <li>Zunara Carvalho</li>
+                <li>Wallace Barbosa Pinho</li>
             </ul>
       </div> 
     </main>
